@@ -1,3 +1,8 @@
+2004-07-22  Christian Neumair  <chris@gnome-de.org>
+
+	* themus-properties-view.c: Use gi18n-lib for internationalization,
+	fixes #109206.
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
